<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_send">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="97dp"
                android:layout_height="22dp"
                android:text="@string/e_mail"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="230dp"
                android:layout_height="38dp"
                android:background="@android:drawable/editbox_background"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/e_mail2"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="116dp"
                android:layout_height="40dp"
                android:layout_marginEnd="197dp"
                android:onClick="sendClick"
                android:text="@string/hint4"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText5"
                android:layout_width="361dp"
                android:layout_height="218dp"
                android:background="@android:drawable/editbox_background"
                android:cursorVisible="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint1"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="false"
                android:textAlignment="textStart"
                android:textCursorDrawable="@null" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>